# src/backend/REST-API/openapi_server/models/__init__.py
@@ -2,3 +2,4 @@
 # import models into model package
 from openapi_server.models.user import User
 from openapi_server.models.user_id import UserId
+from openapi_server.models.quest_user import QuestUser
